Prevent private room info from shifting when round timer drops digits (100->99, etc)

--- a/client/src/styles/components/_game.scss
+++ b/client/src/styles/components/_game.scss
@@ -677,6 +677,10 @@ $loser-board-opacity: 50%;
   .clock {
     font-size: $desktop-private-room-clock-font-size;
   }
+
+  .hidden-digits {
+    visibility: hidden;
+  }
 }
 
 .spectator-message {
